Fix #29 - Incorrect rendering on Firefox 24.0 OSX

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -254,6 +254,8 @@ input[type="checkbox"] {
 .blue-btn {
   background: -webkit-gradient(linear, center top, center bottom, from(deg), color-stop(0, rgba(0,0,0,0.15)), to(rgba(0,0,0,0)));
   background: -webkit-linear-gradient(90deg, rgba(0,0,0,0.15) 0, rgba(0,0,0,0) 100%);
+  background-image: -moz-linear-gradient(90deg, rgba(0,0,0,0.15) 0, rgba(0,0,0,0) 100%);
+  background-image: linear-gradient(90deg, rgba(0,0,0,0.15) 0, rgba(0,0,0,0) 100%);
   background-color: #5b93fc;
   border: 1px solid #4177bb;
   -webkit-font-smoothing: subpixel-antialiased;
